# muselab-codex

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  README_en.md  README_zh.md  SECURITY.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: codex_runtime_issue.md  feature_request.md
.github/workflows/: ci.yml  install-test.yml
backend/: activity.py  activity_api.py  api_push.py  api_settings.py  chat.py  endpoints.py  files.py  main.py  presence.py  push.py  sessions.py  settings.py  turn_notifications.py
backend/codex/: __init__.py  api.py  approvals.py  attachments.py  compact.py  elicitation.py  event_router.py  events.py  history.py  mcp.py  process.py  providers.py  queue.py  queue_drain.py  runtime.py  scheduler.py  scheduler_api.py  settings_api.py  skills.py  terminal.py  threads.py  transcripts.py  turns.py  usage.py  user_input.py
docs/: README.md  README_zh.md  architecture.md  architecture_zh.md  backend-security.md  backend-security_zh.md  codex-gateway.md  codex-gateway_zh.md  configuration.md  configuration_zh.md  data-and-backup.md  data-and-backup_zh.md  glossary.md  glossary_zh.md  infrastructure.md  infrastructure_zh.md  install-linux.md  install-linux_zh.md  install-macos.md  install-macos_zh.md  mobile.md  mobile_zh.md  muses.md  muses_zh.md  quickstart.md  quickstart_zh.md  routing.md  routing_zh.md  scheduler.md  scheduler_zh.md  sdk-bump-checklist.md  skills.md  skills_zh.md  troubleshooting.md  troubleshooting_zh.md  upgrade.md  upgrade_zh.md
docs/specs/: 0001-app-server-spike.md  0002-runtime-and-threads.md  0003-native-chat-mvp.md  0004-native-attachments.md  0005-context-and-compact.md  0006-native-skills.md  0007-native-mcp.md  0008-native-user-input.md  0009-native-context-surfaces.md  0010-native-scheduler.md
frontend/: app.js  index.html  styles.css  sw.js
frontend/assets/: manifest.webmanifest
frontend/i18n/: index.js
scripts/: doctor.sh  dump-tool-catalog.py  install-linux.sh  install-macos.sh  intake.sh  lint.sh  migrate-native-provider-keys.sh  quick-install.sh  uninstall-linux.sh  uninstall-macos.sh  upgrade.sh  versions.env
scripts/templates/: default-AGENTS.en.md  default-AGENTS.md  muselab.service.tmpl
tests/: conftest.py  test_activity.py  test_auth.py  test_chat_options.py  test_chat_stream.py  test_codex_api.py  test_codex_app_server.py  test_codex_approvals.py  test_codex_attachments.py  test_codex_compact.py  test_codex_elicitation.py  test_codex_event_router.py  test_codex_history.py  test_codex_lifecycle.py  test_codex_mcp.py  test_codex_providers.py  test_codex_queue_drain.py  test_codex_rate_limit.py  test_codex_runtime.py  test_codex_scheduler.py  test_codex_skills.py  test_codex_terminal.py  test_codex_threads.py  test_codex_transcripts.py  test_codex_turns.py  test_codex_usage.py  test_codex_user_input.py  test_endpoints.py  test_files.py  test_frontend_lint.py  test_presence.py  test_provider_editor.py  test_push.py  test_regressions.py  test_sdk_truth.py  test_sessions.py  test_turn_notifications.py
tests/e2e/: conftest.py  test_chat_mobile_controls.py  test_chat_render_perf.py  test_files_preview.py  test_multi_tab.py
tests/fixtures/: fake_codex_app_server.py
