[project]
name = "muselab-codex"
version = "0.1.0a1"
description = "Codex-native, self-hosted AI workspace built on codex app-server."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "hesorchen", email = "hesorchen@gmail.com" },
]
keywords = [
    "codex",
    "openai",
    "app-server",
    "mcp",
    "self-hosted",
    "llm",
    "ai-assistant",
    "personal-archive",
    "pwa",
]
classifiers = [
    # PyPI Trove classifiers — surface project status / audience / license /
    # platform / Python version so PyPI search and dependency-graph tools
    # can categorise muselab even though it's not meant to be `pip install`-able
    # (it's a server you self-host, not a library).
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "sse-starlette>=3.4.4",
    # Pin starlette above the fastapi-transitive 1.0.0, which carries
    # PYSEC-2026-161 (fixed in 1.0.1). Direct constraint so the pip-audit
    # CVE-scan CI job stays green.
    "starlette>=1.3.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
    "websockets>=16.1.1",
    # xlsx preview — read-only, used by /api/files/xlsx. Pure-Python, no
    # native deps; safe to ship in the muselab Docker image.
    "openpyxl>=3.1.5",
    # Web Push: VAPID-signed pushes to browsers / PWAs subscribed to
    # /api/push/subscribe. Has a transitive cryptography dep but no
    # external binaries.
    "pywebpush>=2.0.0",
    # Pin aiohttp above the pywebpush-transitive 3.13.5, which carries
    # CVE-2026-34993 + CVE-2026-47265 (both fixed in 3.14.0). Direct
    # constraint so the pip-audit CVE-scan CI job stays green.
    "aiohttp>=3.14.0",
    # PYSEC-2026-2253 through PYSEC-2026-2257 are fixed in 12.3.0.
    "pillow>=12.3.0",
    # Pin pyjwt above the mcp-transitive 2.12.1, which carries
    # PYSEC-2026-175/177/178/179 (all fixed in 2.13.0). Direct constraint
    # so the pip-audit CVE-scan CI job stays green.
    "pyjwt[crypto]>=2.13.0",
]

[project.urls]
Homepage      = "https://github.com/hesorchen/muselab-codex"
Source        = "https://github.com/hesorchen/muselab-codex"
Issues        = "https://github.com/hesorchen/muselab-codex/issues"
Documentation = "https://github.com/hesorchen/muselab-codex/blob/main/docs/README.md"

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    # Pinned alongside dev deps so `scripts/lint.sh` and CI both have a
    # deterministic ruff version. Without this each dev / CI run pulled
    # latest via `uv run --with ruff`, occasionally causing rule churn.
    "ruff>=0.15.20",
]

# Ruff config — keep targeted, not aggressive. Goal: catch real bugs
# (unused imports / variables, broken syntax-adjacent patterns) without
# fighting a project that values terse multi-statement-on-one-line where
# it reads naturally. Style enforcement is left to human review.
[tool.ruff]
target-version = "py312"
line-length = 100   # informational; we don't auto-format

[tool.ruff.lint]
# Default ruleset (E, F, W) — pyflakes + pycodestyle errors only.
# Explicitly NO opinionated rule families (B, I, N, UP) — they'd churn
# 6k LOC of working code for marginal gain.
select = ["E", "F", "W"]
# Project-specific tolerances:
# - E501 line-too-long: many existing lines are 100-120 chars by deliberate
#   choice (one full sentence per comment line). Not worth the churn.
ignore = ["E501"]
